[package]
name = "kv-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

bytevec = "0.2.0"
tokio = { version = "1", features=["full"]}
tokio-stream = "0.1"
tracing = "0.1.29"
chrono = "0.4"
md5 = "0.7.0"

[dependencies.nats]
git = "ssh://git@github.com/nats-io/nats.rs.git"
branch = "release-v0.17.0"
features = ["unstable"]